@@ -1,6 +1,7 @@
 Version 0.4.27, 2012-
 --------------
 + Better support of machines lacking of std::basic_stream
+x License text corrections
 
 Version 0.4.26, 2012-04-09
 --------------
